deleted List in Entity, Model and DTO